# waz-archiv

./: .gitignore  compose.yaml  extract_pages.py  ingest.py  issues.json  pyproject.toml  query.py  test_extraction.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.worker.json  vite.config.ts
frontend/src/: App.css  App.tsx  IssuesBrowser.css  IssuesBrowser.tsx  PdfViewer.css  PdfViewer.tsx  bm25Index.ts  germanStemmer.ts  germanStopwords.ts  highlightStems.ts  index.css  main.tsx  searchCore.ts  searchIndex.ts  searchWorker.ts  textTokenize.ts
