[project]
name = "waz-archiv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0",
    "opensearch-py>=2.7",
    "click>=8.0",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
